 . Box2d: using google code r6 (issue #494)
 . CocosDenshion: correct channel in SimpleAudioEngine (issue #465)
 . CocosDenshion: update buffer status after deletion ( issue #486)
 . CocosDenshion: SimpleAudioEngine can stop sounds (issue #498)
 . Parallax: update children at draw (issue #471)
 . TileMap: TMX maps starts at 0,0 position (part of issue #462)
 . XCode: COCOS2D_DEBUG used instead of DEBUG (issue #507)
 
version 0.8.1-beta - 10-Ago-2009
 . BitmapFontAtlas: .png image can be in subfolders (issue #464)
 . Box2d: possibility to call world.DrawDebugData() from draw (issue #493)
 . Box2d: updated box2d repository. using r228 (issue #494)
 . CocosNode: parent is set to nil only after calling onExit (issue #476)
 . CocosNode: added user data (issue #482)
 . CocosLive: added support to request current ranking (issue #495)
 . MotionStreak: moved from experimental to stable. uses v0.8 API (issue #484)
 . MotionStreak: by default uses GL_SRC_ALPHA blend function (issue #405)
 . ParticleView: integrated Particle visual editor (issue #480)
 . Parallax: more precise absolute coords (issue #471)
 . RenderTexture: let's you render CocosNode objects into a texture (issue #XXX)
 . Template: added XCode cocos2d Template (issue #469)
 . TextureMgr: Async reuses EAGL context (issue #472)
 . tools: added mkatlas.pl script (issue #483)
 . TiledMap: Added support for the TMX format: iso, ortho and hex maps (issue #462)
 . TouchDispatcher: don't dispatch empty touches (issue #468)

version 0.8 - 27-Jul-2009
 . Action: Speed#stop calls other's stop (issue #460)
 . BitmapFontAtlas: opacity and color work as expected (issue #463)
 . CocosNode: setRelativeAnchorPoint error (issue #461)
 . Director: convertCoordinate roundoff error (issue #453)
 
version 0.8-rc2 - 21-Jul-2009
 . Actions: Repeat repeats OK (issue #424)
 . Actions: Prevents division by 0 when duration==0 (issue #452)
 . ActionManager: 5% increase in performance (issue #451)